apigateway/envoy/envoy.yaml
webapp:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: assistant_route
            virtual_hosts:
            - name: assistant_service
              domains:
              - "*"
              routes:
              - name: "assistant"
                match:
                  prefix: "/assistant-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: assistant
              - name: "message"
                match:
                  prefix: "/message-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: message
          http_filters:
          - name: envoy.router
          access_log:
          - name: envoy.file_access_log
            filter:
              not_health_check_filter: {}
            config:
              json_format:
                time: "%START_TIME%"
                protocol: "%PROTOCOL%"
                duration: "%DURATION%"
                request_method: "%REQ(:METHOD)%"
                request_host: "%REQ(HOST)%"
                path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                response_flags: "%RESPONSE_FLAGS%"
                route_name: "%ROUTE_NAME%"
                upstream_host: "%UPSTREAM_HOST%"
                upstream_cluster: "%UPSTREAM_CLUSTER%"
                upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
              path: "/tmp/access.log"
  clusters:
  - name: assistant
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: assistant-api
        port_value: 3001
  - name: message
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: message-api
        port_value: 3002  #TODO, will update to dynamic port from docker-compose env later
